# logspector

./: .gitignore  Cargo.toml  justfile  melos.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
cli/src/: main.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs
crates/collectors/: Cargo.toml
crates/collectors/src/: lib.rs
crates/engine/src/: lib.rs
crates/event_bus/: Cargo.toml
crates/event_bus/src/: lib.rs
crates/exporters/: Cargo.toml
crates/exporters/src/: lib.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/platform/src/: lib.rs
crates/ring_buffer/: Cargo.toml
crates/ring_buffer/src/: lib.rs
crates/utils/src/: lib.rs
examples/basic_app/: pubspec.yaml  pubspec_overrides.yaml
examples/basic_app/.dart_tool/: package_config.json  package_graph.json
examples/basic_app/ios/Runner.xcodeproj/: project.pbxproj
examples/basic_app/lib/: main.dart
examples/basic_app/test/: widget_test.dart
exporters/: pubspec.yaml
exporters/.dart_tool/: package_config.json  package_graph.json
overlay/: pubspec.yaml  pubspec_overrides.yaml
overlay/.dart_tool/: package_config.json  package_graph.json
